--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@tanstack/react-query": "^5.90.11",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -22,7 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
